tests/ui/invalid_frozen_pyclass_borrow.stderr
error: cannot use `#[pyo3(set)]` on a `frozen` class
  --> tests/ui/invalid_frozen_pyclass_borrow.rs:45:12
   |
45 |     #[pyo3(set)]
   |            ^^^

error[E0271]: type mismatch resolving `<Foo as PyClass>::Frozen == False`
   --> tests/ui/invalid_frozen_pyclass_borrow.rs:9:1
    |
  9 | #[pymethods]
    | ^^^^^^^^^^^^ type mismatch resolving `<Foo as PyClass>::Frozen == False`
    |
note: expected this to be `pyo3::pyclass::boolean_struct::False`
   --> tests/ui/invalid_frozen_pyclass_borrow.rs:3:1
    |
  3 | #[pyclass(frozen)]
    | ^^^^^^^^^^^^^^^^^^
note: required by a bound in `pyo3::impl_::extract_argument::extract_pyclass_ref_mut_trusted`
 --> src/impl_/extract_argument.rs
  |
  | pub unsafe fn extract_pyclass_ref_mut_trusted<'a, 'holder, T: PyClass<Frozen = False>>(
  |                                                                       ^^^^^^^^^^^^^^ required by this bound in `extract_pyclass_ref_mut_trusted`
  = note: this error originates in the attribute macro `pymethods` which comes from the expansion of the attribute macro `pyclass` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0271]: type mismatch resolving `<Foo as PyClass>::Frozen == False`
    --> tests/ui/invalid_frozen_pyclass_borrow.rs:16:22
     |
  16 |     let borrow = foo.try_borrow_guard_mut().unwrap();
     |                      ^^^^^^^^^^^^^^^^^^^^ type mismatch resolving `<Foo as PyClass>::Frozen == False`
     |
note: expected this to be `pyo3::pyclass::boolean_struct::False`
    --> tests/ui/invalid_frozen_pyclass_borrow.rs:3:1
     |
   3 | #[pyclass(frozen)]
     | ^^^^^^^^^^^^^^^^^^
note: required by a bound in `pyo3::Py::<T>::try_borrow_guard_mut`
 --> src/instance.rs
  |
  |     pub fn try_borrow_guard_mut<'a>(&'a self) -> Result<PyClassGuardMut<'a, T>, PyBorrowMutError>
  |            -------------------- required by a bound in this associated function
  |     where
  |         T: PyClass<Frozen = False>,
  |                    ^^^^^^^^^^^^^^ required by this bound in `Py::<T>::try_borrow_guard_mut`
  = note: this error originates in the attribute macro `pyclass` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0271]: type mismatch resolving `<Foo as PyClass>::Frozen == False`
   --> tests/ui/invalid_frozen_pyclass_borrow.rs:16:18
    |
 16 |     let borrow = foo.try_borrow_guard_mut().unwrap();
    |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ type mismatch resolving `<Foo as PyClass>::Frozen == False`
    |
note: expected this to be `pyo3::pyclass::boolean_struct::False`
   --> tests/ui/invalid_frozen_pyclass_borrow.rs:3:1
    |
  3 | #[pyclass(frozen)]
    | ^^^^^^^^^^^^^^^^^^
note: required by a bound in `PyClassGuardMut`
 --> src/pyclass/guard.rs
  |
  | pub struct PyClassGuardMut<'a, T: PyClass<Frozen = False>> {
  |                                           ^^^^^^^^^^^^^^ required by this bound in `PyClassGuardMut`
  = note: this error originates in the attribute macro `pyclass` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0271]: type mismatch resolving `<ImmutableChild as PyClass>::Frozen == False`
    --> tests/ui/invalid_frozen_pyclass_borrow.rs:28:24
     |
  28 |     let borrow = child.try_borrow_guard_mut().unwrap();
     |                        ^^^^^^^^^^^^^^^^^^^^ type mismatch resolving `<ImmutableChild as PyClass>::Frozen == False`
     |
note: expected this to be `pyo3::pyclass::boolean_struct::False`
    --> tests/ui/invalid_frozen_pyclass_borrow.rs:24:1
     |
  24 | #[pyclass(frozen, extends = MutableBase)]
     | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: required by a bound in `pyo3::Py::<T>::try_borrow_guard_mut`
 --> src/instance.rs
  |
  |     pub fn try_borrow_guard_mut<'a>(&'a self) -> Result<PyClassGuardMut<'a, T>, PyBorrowMutError>
  |            -------------------- required by a bound in this associated function
  |     where
  |         T: PyClass<Frozen = False>,
  |                    ^^^^^^^^^^^^^^ required by this bound in `Py::<T>::try_borrow_guard_mut`
  = note: this error originates in the attribute macro `pyclass` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0271]: type mismatch resolving `<ImmutableChild as PyClass>::Frozen == False`
   --> tests/ui/invalid_frozen_pyclass_borrow.rs:28:18
    |
 28 |     let borrow = child.try_borrow_guard_mut().unwrap();
    |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ type mismatch resolving `<ImmutableChild as PyClass>::Frozen == False`
    |
note: expected this to be `pyo3::pyclass::boolean_struct::False`
   --> tests/ui/invalid_frozen_pyclass_borrow.rs:24:1
    |
 24 | #[pyclass(frozen, extends = MutableBase)]
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: required by a bound in `PyClassGuardMut`
 --> src/pyclass/guard.rs
  |
  | pub struct PyClassGuardMut<'a, T: PyClass<Frozen = False>> {
  |                                           ^^^^^^^^^^^^^^ required by this bound in `PyClassGuardMut`
  = note: this error originates in the attribute macro `pyclass` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0271]: type mismatch resolving `<MutableBase as PyClass>::Frozen == True`
    --> tests/ui/invalid_frozen_pyclass_borrow.rs:34:11
     |
  34 |     class.get();
     |           ^^^ type mismatch resolving `<MutableBase as PyClass>::Frozen == True`
     |
note: expected this to be `pyo3::pyclass::boolean_struct::True`
    --> tests/ui/invalid_frozen_pyclass_borrow.rs:21:1
     |
  21 | #[pyclass(subclass)]
     | ^^^^^^^^^^^^^^^^^^^^
note: required by a bound in `pyo3::Py::<T>::get`
 --> src/instance.rs
  |
  |     pub fn get(&self) -> &T
  |            --- required by a bound in this associated function
  |     where
  |         T: PyClass<Frozen = True> + Sync,
  |                    ^^^^^^^^^^^^^ required by this bound in `Py::<T>::get`
  = note: this error originates in the attribute macro `pyclass` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0271]: type mismatch resolving `<MutableBase as PyClass>::Frozen == True`
   --> tests/ui/invalid_frozen_pyclass_borrow.rs:39:11
    |
 39 |     class.get();
    |           ^^^ type mismatch resolving `<MutableBase as PyClass>::Frozen == True`
    |
note: expected this to be `pyo3::pyclass::boolean_struct::True`
   --> tests/ui/invalid_frozen_pyclass_borrow.rs:21:1
    |
 21 | #[pyclass(subclass)]
    | ^^^^^^^^^^^^^^^^^^^^
note: required by a bound in `pyo3::Bound::<'py, T>::get`
 --> src/instance.rs
  |
  |     pub fn get(&self) -> &T
  |            --- required by a bound in this associated function
  |     where
  |         T: PyClass<Frozen = True> + Sync,
  |                    ^^^^^^^^^^^^^ required by this bound in `Bound::<'py, T>::get`
  = note: this error originates in the attribute macro `pyclass` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 8 previous errors

For more information about this error, try `rustc --explain E0271`.
